# Jinja2Cpp

./: CMakeLists.txt  conanfile.py
cmake/public/: LibraryConfig.cmake.in
src/: expression_evaluator.cpp  internal_value.cpp  internal_value.h  value_visitors.h
test/: expressions_test.cpp  test_tools.h
